# darktorrent-mahou-dl

./: Dockerfile  main.py  pyproject.toml
src/anime_torrent_dl/: __init__.py  custom_types.py  utils.py
