[project]
name = "anime-torrent-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brotli>=1.1.0",
    "beautifulsoup4>=4.12.3",
    "uvloop>=0.20.0",
    "aiohttp>=3.10.10",
    "torrentp>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
